// syntax declaration
syntax = "proto3";

// java options
option java_multiple_files = true;
option java_package = "com.bryanmullen.feedService";
option java_outer_classname = "FeedPackage";

// package
package feedService;

// messages
message AddToFeedRequest{}
message AddToFeedResponse{}
message CurrentWaterRequest{}
message CurrentWaterResponse{}
message FeedConsumptionRequest{}
message FeedConsumptionResponse{}

// service definition
service FeedService {
  // This method should allow the client to open a delivery chute for feed
  // for the animals. Further to this it should log the current weight before
  // and after delivery in order to log the amount consumed.This method will
  // be implemented using Bi Directional Streaming.
  rpc addToFeedAvailable (AddToFeedRequest) returns (AddToFeedResponse) {}

  // This method should simply return the current water available by means of
  // a weight/volume sensor, for ensuring there is adequate water available
  // .This method will be implemented using Server Streaming.
  rpc currentWaterAvailable (CurrentWaterRequest) returns
      (CurrentWaterResponse) {}

  // This method should return a report outlining the feed consumed in a
  // particular time period. This could be used either for predicting supply
  // levels or to monitor animal health.This method will be implemented using
  // Unary Method.
  rpc feedConsumption (FeedConsumptionRequest) returns (FeedConsumptionResponse) {}
}